[package]
name = "veloren-dissector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" } 
lz-fear = { version = "0.1.1" }
veloren-common-net = { version = "0.10.0", path = "../veloren/common/net" }
veloren-common = { version = "0.10.0", path = "../veloren/common", features = ["no-assets"] }

[lib]
crate-type = ["staticlib"]
