[package]
name = "veloren-dissector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" } 
lz-fear = { version = "0.1.1" }
veloren-common-net = { path = "../veloren/common/net" }
veloren-common = { path = "../veloren/common", features = ["no-assets"] }

[lib]
crate-type = ["staticlib"]

[patch.crates-io]
# until next specs release
specs = { git = "https://github.com/amethyst/specs.git", rev = "4e2da1df29ee840baa9b936593c45592b7c9ae27" }
